@@ -6,10 +6,10 @@ JASC-PAL
 246 139 74
 123 205 65
 98 156 230
-246 172 172
-205 148 90
-172 98 65
-65 98 197
+173 172 246
+100 91 205
+73 65 170
+79 111 201
 0 0 0
 0 0 0
 0 0 0
