@@ -84,5 +84,6 @@
 #define HOLD_EFFECT_TOXIC_ORB      80
 #define HOLD_EFFECT_FLAME_ORB      81
 #define HOLD_EFFECT_HOPE_MASK      82
+#define HOLD_EFFECT_EXPERT_BELT    83
 
 #endif // GUARD_HOLD_EFFECTS_H
